Script de processamento de áudio adicionado com verificação de versão e reamostragem
- Implementado um script para carregar e processar arquivos de áudio usando o Torchaudio.
- Verificação de versão adicionada para Torch e Torchaudio.
- Extração de metadados incluída para o arquivo de áudio.
- Áudio convertido para mono, calculando a média dos canais, se necessário.
- Áudio reamostrado para uma taxa de amostragem alvo de 16.000 Hz.
- Diversas propriedades de áudio impressas antes e depois do processamento.

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,9 @@ nltk          # Biblioteca para processamento de linguagem natural (PLN).
 django        # Framework web para desenvolvimento de aplicações robustas em Python.
 flask         # Microframework web para desenvolvimento de aplicações leves em Python.
 
+SpeechRecognition # Biblioteca para reconhecimento de fala em Python.
+pyttsx3      # Biblioteca para conversão de texto em fala (TTS) em Python.
+
 # pyserial      # Biblioteca para comunicação serial (ex.: com dispositivos via porta serial).
 # pygame        # Biblioteca para desenvolvimento de jogos e multimídia.
 # torchvision # Biblioteca para visão computacional com PyTorch.
